@@ -16,7 +16,7 @@ table_view_settings_dialog_size=500/400
 filter_dialog_size=700/400
 quick_filter_default_field=0
 file_import_online_service_region=
-card_view_picture_order=8\#
+card_view_picture_order=12\#
 file_import_recursive=false
 mass_update_region=
 quick_view_field_definitions={13/&/true/&/Horizontal/&/0}{14/&/true/&/Horizontal/&/0}{100000011/&/false/&/Horizontal/&/0}{100000002/&/false/&/Horizontal/&/0}{100000004/&/false/&/Horizontal/&/0}{100000213/&/false/&/Horizontal/&/0}{100000155/&/false/&/Horizontal/&/0}{100000003/&/false/&/Horizontal/&/0}{100000218/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{100000153/&/false/&/Horizontal/&/0}{100000001/&/false/&/Horizontal/&/0}{100000222/&/false/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{150/&/false/&/Horizontal/&/0}{151/&/true/&/Horizontal/&/0}{153/&/true/&/Horizontal/&/0}{2/&/true/&/Horizontal/&/0}{202/&/true/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{213/&/true/&/Horizontal/&/0}{155/&/true/&/Horizontal/&/0}{216/&/true/&/Horizontal/&/0}{204/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{215/&/true/&/Horizontal/&/0}{11/&/true/&/Horizontal/&/0}{218/&/true/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{217/&/true/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{7/&/true/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{8/&/true/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{154/&/true/&/Horizontal/&/0}{10/&/true/&/Horizontal/&/0}{12/&/true/&/Horizontal/&/0}{222/&/true/&/Horizontal/&/0}{9/&/true/&/Horizontal/&/0}{152/&/true/&/Horizontal/&/0}{205/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{219/&/false/&/Horizontal/&/0}{203/&/true/&/Horizontal/&/0}{220/&/true/&/Horizontal/&/0}{221/&/true/&/Horizontal/&/0}
